Fix Overlapping Buttons With Title on Folder View Page

--- a/src/FolderView.css
+++ b/src/FolderView.css
@@ -15,7 +15,7 @@ html, body, .topbar, .folder-link, .image-description, .work-date {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-left: auto;
+  margin-left: 60px;
   margin-right: auto;
   margin-bottom: 100px;
   word-wrap: break-word;
@@ -323,14 +323,12 @@ html, body, .topbar, .folder-link, .image-description, .work-date {
 .arrow-left {
   left: 5px;
   border-style: solid;
-  border-width: 7.5px 10px 7.5px 0;
   border-color: transparent rgba(255, 255, 255, 0.8) transparent transparent;
 }
 
 .arrow-right {
   right: 5px;
   border-style: solid;
-  border-width: 7.5px 0 7.5px 10px;
   border-color: transparent transparent transparent rgba(255, 255, 255, 0.8);
 }
 
